fix: use teal for plate 10 for better contrast for dark theme

--- a/src/style.css
+++ b/src/style.css
@@ -61,3 +61,8 @@ body {
   background-color: #6f42c1 !important;
   color: #fff !important;
 }
+
+.text-bg-teal {
+  background-color: #20c997 !important;
+  color: #fff !important;
+}
